# 3DObjectTracking

./: .gitignore  readme.md
M3T/: .gitignore  CMakeLists.txt  UML.drawio
M3T/data/_body/: io_485.STL  io_485.yaml  io_485_static_detector.yaml
M3T/data/_sequence/: color_camera.yaml
M3T/data/pen_paper_demo/: config.yaml
M3T/examples/: CMakeLists.txt  record_camera_sequence.cpp  run_on_camera_sequence.cpp  run_on_recorded_sequence.cpp
M3T/src/: CMakeLists.txt  normal_viewer.cpp
M3T/test/: CMakeLists.txt
